Switch to compile-testing